--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
         <section class="section section--centered">
             <div class="section__inner">
-                <p data-aos="fade-up" data-aos-duration="2000">Antes era imposible trabajar de manera remota, pero ahora
+                <p data-aos="fade-up" data-aos-duration="1000">Antes era imposible trabajar de manera remota, pero ahora
                     gracias a computadores como el <span class="text--orange">ConceptD 5</span>, es posible estar en
                     cualquier lugar y crear contenido de calidad.</p>
 
-                <p data-aos="fade-up" data-aos-duration="2000"> De hecho, gracias a que el <span
+                <p data-aos="fade-up" data-aos-duration="1000"> De hecho, gracias a que el <span
                         class="text--orange">ConceptD 5</span> tiene tecnología Intel® Core i5, i7 e í9, es ideal para
                     diseñadorescreativos, y creadores de contenidos.</p>
-                <img src="dist/images/intel-core-logo.png" data-aos="fade-up" data-aos-duration="2000">
+                <img src="dist/images/intel-core-logo.png" data-aos="fade-up" data-aos-duration="1000">
 
-                <p data-aos="fade-up" data-aos-duration="2000">Y es que cuando se está en un proceso creativo, lo
+                <p data-aos="fade-up" data-aos-duration="1000">Y es que cuando se está en un proceso creativo, lo
                     último que se quiere es sufrir por problemas tecnológicos. Este computador te permite que los
                     colores, las imágenes, los sonidos, el movimiento, y la magia, conviertan las ideas en una realidad.
                 </p>
@@ -65,18 +65,18 @@
         <section class="section">
             <div class="section__inner">
                 <div class="section_3col">
-                    <div class="col" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="col" data-aos="fade-up" data-aos-duration="1000">
                         <h2>¿Qué puedes lograrcon este computador?</h2>
                         <p>Transferir archivos de imagen a altas velocidades. Renderizar gráficos sin interrupciones.
                         </p>
                     </div>
 
-                    <div class="col" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="col" data-aos="fade-up" data-aos-duration="1000">
                         <h2>Velocidad y precisión</h2>
                         <p>Cuenta con procesadores Intel® Core i5, i7 e í9 de 9na generación con los cuales se logra
                             potencia, además de gráficos precisos.</p>
                     </div>
-                    <div class="col" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="col" data-aos="fade-up" data-aos-duration="1000">
                         <h2>CIFRAS</h2>
                         <p>Con estos procesadores puede realizar una edición de video en 4K hasta un 54% más rápida.
                             Tener un rendimiento hasta un 33% más rápido.</p>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="splash-bg">
-                    <img src="dist/images/splash-bg.png" data-aos="fade-up" data-aos-duration="2000">
+                    <img src="dist/images/splash-bg.png" data-aos="fade-up" data-aos-duration="1000">
                     <img src="dist/images/three_pc.png" data-enllax-ratio=".5" data-enllax-type="foreground" data-enllax-direction="vertical">
                 </div>
             </div>
@@ -102,12 +102,12 @@
                     <div class="content content-left">
 
 
-                        <h2 class="section__title" data-aos="fade-up" data-aos-duration="2000"
+                        <h2 class="section__title" data-aos="fade-up" data-aos-duration="1000"
                             data-aos-anchor-placement="top-center">¡Una máquina a todapotencia!</h2>
-                        <p data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">Cuenta con
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">Cuenta con
                             una pantalla 4K validada por Patone® y una relación de pantalla a cuerpo del 80%, debido a
                             los marcos de 6,22 mm de grosor.</p>
-                        <p data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">El
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">El
                             ConceptD 5 apuesta claramente por ofrecer los componentes más avanzados para garantizar
                             rendimiento en este terreno, incluida una generosa pantalla de 15 o 17 pulgadas que agradará
                             a diseñadores y creativos.
@@ -125,7 +125,7 @@
         <section class="section backgroundOne">
 
             <div class="section__inner">
-                <div class="section__content" data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">
+                <div class="section__content" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">
                     <div class="section__row">
                         <div class="section__col">
                             <p>Incorpora gráficos <strong>Radeon RX Vega M GL</strong>.</p>
@@ -150,22 +150,22 @@
         <section class="background-half-grey">
 
             <div class="section__inner content--centered">
-                <h2 class="section__title" data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">
+                <h2 class="section__title" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">
                     Estética envidiable
                 </h2>
 
-                <p data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">El <strong>chasis
+                <p data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">El <strong>chasis
                         de metal</strong> esculpido demuestra un diseño atemporal que es ideal para los creadores que
                     necesitan trabajar en lugares novedosos. </p>
                 <a href=""><img src="dist/images/video.png" class="video-placeholder" data-aos="fade-up"
-                        data-aos-duration="2000" data-aos-anchor-placement="top-center"></a>
+                        data-aos-duration="1000" data-aos-anchor-placement="top-center"></a>
             </div>
 
-            <div data-aos="fade-down" data-aos-duration="2000" class="floating-item4">
+            <div data-aos="fade-down" data-aos-duration="1000" class="floating-item4">
                 <img src="dist/images/chevron.png">
             </div>
 
-            <div data-aos="fade-down" data-aos-duration="2000" class="floating-item5">
+            <div data-aos="fade-down" data-aos-duration="1000" class="floating-item5">
                 <img src="dist/images/section-form.png">
             </div>
 
@@ -176,7 +176,7 @@
             <div class="section__inner">
                 <div class="section__content">
                     <div class="section__row">
-                        <div class="section__col" data-aos="fade-up" data-aos-duration="2000"
+                        <div class="section__col" data-aos="fade-up" data-aos-duration="1000"
                             data-aos-anchor-placement="top-center">
                             <p>- Los portátiles <span class="text--orange"><strong>ConceptD</strong></span> tienen un
                                 teclado <strong>retroiluminado en color ámbar</strong>.</p>
@@ -191,8 +191,8 @@
                         </div>
 
                         <div class="section__col">
-                            <img src="dist/images/pc3.png" data-enllax-ratio="-.15" data-enllax-direction="vertical"
-                            data-enllax-type="foreground">
+                            <img src="dist/images/pc3.png" data-aos="fade-up" data-aos-duration="1000"
+                            data-aos-anchor-placement="top-center">
                         </div>
                     </div>
 
