--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                 </div>
 
                 <div class="splash-bg">
-                    <img src="dist/images/splash-bg.png" data-aos="fade-up" data-aos-duration="1000">
-                    <img src="dist/images/three_pc.png" data-enllax-ratio=".5" data-enllax-type="foreground" data-enllax-direction="vertical">
+                    <img src="dist/images/three_pc.png" data-aos="fade-up" data-aos-duration="2000">
                 </div>
             </div>
         </section>
@@ -93,10 +92,8 @@
 
         <section class="section background--grey">
             <div class="section__row section__row--full">
-                <div class="section__col image-full">
-                    <img src="dist/images/img-ambiente.png">
+                <div class="section__col image-full ambienteuno">
                 </div>
-
 
                 <div class="section__col content-full">
                     <div class="content content-left">
@@ -125,7 +122,8 @@
         <section class="section backgroundOne">
 
             <div class="section__inner">
-                <div class="section__content" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">
+                <div class="section__content" data-aos="fade-up" data-aos-duration="1000"
+                    data-aos-anchor-placement="top-center">
                     <div class="section__row">
                         <div class="section__col">
                             <p>Incorpora gráficos <strong>Radeon RX Vega M GL</strong>.</p>
@@ -150,7 +148,8 @@
         <section class="background-half-grey">
 
             <div class="section__inner content--centered">
-                <h2 class="section__title" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">
+                <h2 class="section__title" data-aos="fade-up" data-aos-duration="1000"
+                    data-aos-anchor-placement="top-center">
                     Estética envidiable
                 </h2>
 
@@ -192,7 +191,7 @@
 
                         <div class="section__col">
                             <img src="dist/images/pc3.png" data-aos="fade-up" data-aos-duration="1000"
-                            data-aos-anchor-placement="top-center">
+                                data-aos-anchor-placement="top-center">
                         </div>
                     </div>
 
@@ -202,13 +201,14 @@
 
             <div class="floating-item6">
                 <img src="dist/images/section-form2.png" data-enllax-ratio=".5" data-enllax-direction="vertical"
-                data-enllax-type="foreground">
+                    data-enllax-type="foreground">
             </div>
         </section>
 
 
         <section class="section background--grey section-seven">
-            <div class="section__inner content--centered">
+            <div class="section__inner content--centered" data-aos="fade-up" data-aos-duration="1000"
+            data-aos-anchor-placement="top-center">
                 <h2 class="section__title">¿Dónde comprar?</h2>
                 <p>En Alkosto y Ktronix podrá encontrar este compañero perfecto para hacer volar la creatividad y obtene
                     un beneficio único.
@@ -219,7 +219,7 @@
                     <a href="" target="_blank"><img src="dist/images/logo_alkosto.png"></a>
                     <a href="" target="_blank"><img src="dist/images/logo_ktronix.png"></a>
                 </div>
-               
+
             </div>
         </section>
 
@@ -227,27 +227,28 @@
         <section class="section section-eight">
             <div class="section__row section__row--full">
 
-                <div class="section__col content-full ">
-                    <div class="content content-left">
+                <div class="section__col content-full " data-aos="fade-up" data-aos-duration="1000"
+                data-aos-anchor-placement="top-center">
+                    <div class="content content-right">
 
 
-                        <h2 class="section__title" data-aos="fade-up" data-aos-duration="1000"
-                            data-aos-anchor-placement="top-center">¡Una máquina a todapotencia!</h2>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">Cuenta con
-                            una pantalla 4K validada por Patone® y una relación de pantalla a cuerpo del 80%, debido a
-                            los marcos de 6,22 mm de grosor.</p>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">El
-                            ConceptD 5 apuesta claramente por ofrecer los componentes más avanzados para garantizar
-                            rendimiento en este terreno, incluida una generosa pantalla de 15 o 17 pulgadas que agradará
-                            a diseñadores y creativos.
+                        <h2 class="section__title" >Tres meses de membresía de Adobe Creative Cloud</h2>
+                        <p>Al
+                            registrar su dispositivo <strong>ConceptD</strong> en <strong>Acer ID</strong>, puede recibir tres meses de acceso a más de 20
+                            aplicaciones creativas de escritorio y móviles, incluidas: Adobe Photoshop, Illustrator,
+                            InDesign, Premiere Rush, XD, Acrobat Pro, etc.</p>
+
+                        <p>Esta
+                        membresía de <strong>Adobe Creative Cloud</strong> también incluye: 100 GB de almacenamiento en la nube, Adobe
+                        Portfolio, Adobe Fonts y Adobe Spark.
                         </p>
+
 
                     </div>
 
                 </div>
 
-                <div class="section__col image-full">
-                    <img src="dist/images/img-ambiente2.png">
+                <div class="section__col image-full ambientedos">
 
                 </div>
             </div>
